# tp-engsoft2-repo-miner

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/: main.py
src/repo_maintenance_miner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/repo_miner/: __init__.py  activity.py  cli.py  deps.py  exporters.py
tests/: test_activity.py  test_cli.py  test_cli_remote_deps.py  test_deps_network.py  test_deps_parsing.py  test_exporters.py
