[project]
name = "repo-maintenance-miner"
version = "0.1.0"
description = "CLI para minerar repositórios e avaliar saúde de manutenção (atividade e dependências)"
authors = [
  {name = "Guilherme Gomes Palhares Gomide"},
  {name = "Diogo Alves Graciano"},
  {name = "Victor Yuji Yano"},
  {name = "Guilherme Novais de Souza"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "pydriller>=2.6",
  "requests>=2.31",
  "semver>=3.0.0",
  "rich>=13.7",
  "tomli>=2.0; python_version < '3.11'"
]

[project.scripts]
repo-miner = "repo_miner.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
